Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65173

Shape plugin resources not found in static builds

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.1
    • 5.10.0
    • Quick: Other
    • None
    • * Qt 5.10.0
      * Debug build
      * iPad (5th generation) (Model A1822)
      * iOS 10.3.3 (14G60)
      * Xcode Version 9.2 (9C40b)
      * macOS 10.13.1
    • 50692eb148f9fca8befa14adc0b942a782a1d767

    Description

      Using Qt 5.10.0 on iOS the radial gradients are broken. This is trivially reproducible by compiling the example shapes.

      It seems that the problem is due to the shaders not being able to load:

      Failed to find shader ":/qt-project.org/shapes/shaders/lineargradient.vert"
      Failed to find shader ":/qt-project.org/shapes/shaders/lineargradient.frag"
      QOpenGLShader::link: ERROR: Compiled vertex shader was corrupt.
      ERROR: Compiled fragment shader was corrupt.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            stephane.magnenat Stéphane Magnenat
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes