Rename Shapes plugin's qrc to something more unique

shapes.qrc conflicted with the shapes example's shapes.qrc. The Q_INIT_RESOURCE
was probably calling the example's initResource, leading to not finding the
plugin's files in the resource system at runtime in static builds.

Task-number: QTBUG-65173
Change-Id: Ic9187c818119b1984c3748bb032d98b3716733a9
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>